[package]
name = "amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
blake3 = { version = "=1.5.5", features = ["digest"] }
zeroize_derive = "=1.4.2"
proc-macro-crate = "=3.2.0"
toml_edit = { version = "=0.22.20", features = ["serde"] }
indexmap = "=2.7.1"
hashbrown = "=0.15.2"
borsh = "=1.5.3"
borsh-derive = "=1.5.3"
